<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aoprisor.myapplication.HomeControllerActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/temperature"
            android:id="@+id/temperature"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="@color/accent_material_light"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="celsius"
            android:id="@+id/temperatureView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateButtonId"
            android:id="@+id/updateButtonId"
            android:layout_gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatureButton"
            android:id="@+id/temperatureButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@color/accent_material_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alert"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/accent_material_light"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="OFF"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertButton"
            android:id="@+id/alertButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/accent_material_dark" />


    </LinearLayout>
</RelativeLayout>
